<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_relative"
    android:padding="@dimen/_10sdp">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
          android:orientation="vertical">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="@dimen/_10sdp"
                   android:text="@string/select_an_option_to_delete_this_msg"
                   android:textColor="@color/orange"
                   android:gravity="center"
                   android:fontFamily="@font/montserrat_bold"
                   android:textSize="@dimen/_12sdp"/>

               <View
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_1sdp"
                   android:background="@color/light_gray"/>

          </LinearLayout>

          <LinearLayout
              android:id="@+id/deleteForMeBtn"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="@dimen/_10sdp"
                   android:text="@string/delete_for_me_only"
                   android:textColor="@color/black"
                   android:gravity="center"
                   android:fontFamily="@font/montserrat_medium"
                   android:textSize="@dimen/_12sdp"/>

               <View
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_1sdp"
                   android:background="@color/light_gray"/>

          </LinearLayout>
          <LinearLayout
              android:id="@+id/deleteForEveryOneBtn"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="@dimen/_10sdp"
                   android:text="@string/delete_for_everyone"
                   android:textColor="@color/black"
                   android:gravity="center"
                   android:fontFamily="@font/montserrat_medium"
                   android:textSize="@dimen/_12sdp"/>

               <View
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_1sdp"
                   android:background="@color/light_gray"/>

          </LinearLayout>
          <LinearLayout
              android:id="@+id/cancelBtn"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="@dimen/_10sdp"
                   android:text="@string/cancel"
                   android:textColor="@color/red"
                   android:gravity="center"
                   android:fontFamily="@font/montserrat_bold"
                   android:textSize="@dimen/_12sdp"/>

               <View
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_1sdp"
                   android:background="@color/light_gray"/>

          </LinearLayout>


     </LinearLayout>
    
</RelativeLayout>